endpoints custom-tour, contact and db

--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "lalaji.uptowork@gmail.com",
   "license": "ISC",
   "dependencies": {
-        "app-root-path": "^3.0.0",
-        "cors": "^2.8.5",
-        "express": "^4.16.2",
-        "morgan": "^1.10.0",
-        "winston": "^3.2.1",
-        "winston-daily-rotate-file": "^4.4.2"
-    }
+    "app-root-path": "^3.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.16.2",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.7",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.2"
+  }
 }
