--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.16.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.10.0",
     "openai": "^4.89.0",
     "sqlite3": "^5.1.7",
     "winston": "^3.2.1",
