--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.16.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.17.0",
     "nodemailer": "^6.10.0",
     "openai": "^4.89.0",
-    "sqlite3": "^5.1.7",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   }
